@@ -1,3 +1,9 @@
+2012-12-10  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/55107
+	* gcc.dg/torture/pr55107.c: New testcase.
+	* gcc.dg/tree-ssa/ssa-pre-5.c: Adjust.
+
 2012-12-10  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/asan/asan_test.cc: Sync from upstream.
